# git-wippy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  pr.yml
locales/: de-DE.ftl  en-GB.ftl  en-US.ftl  fr-FR.ftl
src/: cli.rs  i18n.rs  main.rs  output.rs
src/commands/: delete.rs  list.rs  mod.rs  restore.rs  save.rs
src/utils/: color.rs  execute_git_command.rs  formatted_datetime.rs  get_user_wip_branches.rs  git.rs  git_username.rs  mod.rs  parse_commit_message.rs
tests/: cli.rs
tests/common/: mod.rs
