[package]
name = "git-wippy"
description = "Git stash with super powers"
documentation = "https://github.com/mekwall/git-wippy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-wippy"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.5", features = [] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1.0"
chrono = "0.4"
dialoguer = "0.11"

[dev-dependencies]
precious = "0.6.2"
tokio-test = "0.4"
assert_cmd = "2.0"
tempfile = "3.2"
mockall = "0.12"
async-trait = "0.1"
regex = "1.5"
