[package]
name = "git-wippy"
description = "Git stash with super powers"
documentation = "https://github.com/mekwall/git-wippy"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "git-wippy"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "string", "help", "usage", "error-context"] }
clap-cargo = "0.13"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "process", "fs"] }
anyhow = "1.0.81"
chrono = "0.4.35"
dialoguer = "0.11.0"
async-trait = "0.1.77"
futures = "0.3.30"
fluent = "0.16.0"
unic-langid = "0.9.1"

[dev-dependencies]
tokio-test = "0.4.3"
assert_cmd = "2.0.14"
tempfile = "3.10.1"
mockall = "0.12.1"
async-trait = "0.1.77"
regex = "1.10.3"
predicates = "3.1.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "process", "fs"] }
